--- a/client/deployment.yaml
+++ b/client/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: client
-        image: ayshamarty/client:v1
+        image: ayshamarty/client:latest
         ports:
         - containerPort: 3000
 
