--- a/client/deployment.yaml
+++ b/client/deployment.yaml
@@ -16,6 +16,7 @@ spec:
       containers:
       - name: client
         image: ayshamarty/client:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 3000
 
